[project]
name = "op9"
version = "0.1.0"
description = "Building intercom auto-entry service via Twilio"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.69.0",
    "fastapi>=0.138.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
